Mon Oct 24 09:07:04 UTC 2005 / Arnaud Quette <aquette.dev@gmail.com>

 - megatec: add this driver, which is the renamed powermust driver made
   more generic. This one now replaces powermust, and will replace mustek
   and blazer (and possibly fentonups, ippon, masterguard and sms)

   (Carlos Rodrigues)

 - add Maxxtro UPS 600 VA support, through the serial port, with the
   new megatec driver (from Flavio Grossi)

Sun Oct 23 05:24:25 UTC 2005 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: added support for CyberPower 685AVR, based on HID Usage
   Tree posted by Scott Alfter. This is very similar to APC, so
   combined APC and CyberPower into a single subdriver.

Fri Oct 21 17:42:28 UTC 2005 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: added missing "usage" definitions from HID Power
   Device specification, corrected spellings.

Fri Oct 21 03:38:17 UTC 2005 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: enforce using "-x vendorid" together with "-x generic". 
 - newhidups: added new info to man page and docs/hid-subdrivers.txt

Fri Oct 21 03:03:44 UTC 2005 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: added "-x generic" option to allow connecting to an
   unsupported UPS. This should be used together with the "-x
   vendorid" option to select the device to connect to, and allows
   users to product a dump of the usage tree of an unknown device
   without having to modify the sources.

Wed Oct 19 14:10:29 UTC 2005 / Arnaud Quette <aquette.dev@gmail.com>

 - debian/: more update (still draft) to prepare 2.0.2-2 release

 - nitram: new driver for Nitram Elite 2005, and probably some
   recent Cyberpower units

   (Olivier Albiez)

Mon Oct 10 20:15:24 UTC 2005 / Arnaud Quette <aquette.dev@gmail.com>

 - driver.list: add Eltek AL175 alarm module (Kirill Smelkov)
 
Sun Oct  9 05:31:09 UTC 2005 / Peter Selinger <selinger@users.sourceforge.net>
